# garava

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PRODUCT_OVERVIEW.md  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
docs/: index.html  llms.txt  robots.txt  sitemap.xml
garava/: __init__.py  __main__.py  config.py  database.py  models.py
garava/cli/: commands.py
garava/garmin/: __init__.py  activities.py  client.py
garava/strava/: auth.py  client.py  gear.py  upload.py
garava/sync/: __init__.py  core.py  filters.py  healthcheck.py  processor.py
tests/: __init__.py
