[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "garava"
version = "0.1.0"
description = "Selective Garmin-to-Strava activity sync with filtering"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Marc Geraldez" }]
dependencies = [
    "garth>=0.4.46",
    "stravalib>=1.6,<2",
    "click>=8.1.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
garava = "garava.cli.commands:cli"

[tool.hatch.build.targets.wheel]
packages = ["garava"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
